src/test/resources/json/invalid_inputs/invalid_map_char.json.except
 Invalid character in the map: 'Q'.